Update gradle wrapper and modernize code.